--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@craco/craco": "^6.2.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
@@ -14,9 +15,9 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
         "eject": "react-scripts eject",
         "prepare": "husky install"
     },
@@ -39,9 +40,12 @@
         ]
     },
     "devDependencies": {
+        "autoprefixer": "^9.8.6",
         "husky": "^7.0.2",
         "lint-staged": "^11.1.2",
-        "prettier": "2.3.2"
+        "postcss": "^7.0.36",
+        "prettier": "2.3.2",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
     },
     "lint-staged": {
         "**/*": "prettier --write --ignore-unknown"
