--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "bootstrap": "^3.4.1",
         "framer-motion": "^4.1.17",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.7.0",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.1",
         "react-scripts": "4.0.3",
